<resources>
    <string name="app_name">WeatherForcastApp</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Favourites">Favourites</string>
    <string name="Setting">Setting</string>
    <string name="Pressure">Pressure</string>
    <string name="Humadity">Humadity</string>
    <string name="Wind">Wind</string>
    <string name="Cloud">Cloud</string>
    <string name="ultraViolet">Ultra  Violet</string>
    <string name="Visibility">Visibility</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="confirmation_message">Confirm Message</string>
    <string name="Do_You_want">Do you want add this location ?</string>
    <string name="ok">ok</string>
    <string name="location">Location</string>
    <string name="use_device_location">Use Device Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="units">Units</string>
    <string name="unit_system">Unit System</string>
    <string name="language">Language</string>
    <string name="lang_system">languade System</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="Alerts">Alerts</string>
    <string name="Weather_Forecast" >Weather Forecast</string>
</resources>